# Smart-home-monitoring-system

./: README.md
Firmware/ESP32/: CMakeLists.txt
Firmware/ESP32/include/: ml.h  ml_occ.h  model_consts.h  model_data.h  model_data_occ.h
Firmware/ESP32/main/: CMakeLists.txt  main.c  ml.cpp  ml_occ.cpp  model_data.cc  model_data_occ.cc
Firmware/ESP32/tools/: occ_model_int8.tflite  temp_model_int8.tflite
HomeAssistant/: automations.yaml  config.cleaned.yaml  config.yaml  dashboard.yaml
docs/interview_pack/: HIGH_LEVEL_BEHAVIOURS.md  INTERVIEW_ONE_PAGER.md  LIBRARIES_AND_DEPENDENCIES.md  MQTT_TOPICS_AND_PAYLOADS.md
